# vibe-coding

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  opencode.json  requirements.txt
.claude/: settings.json
.second-brain/: README.md  RESOLVER.md  schema.md
config/: dojo-event.toml
docs/: model-routing.md  quality-bar.md  tool-options.md
dojo_app/: __init__.py  barrybot.py  barryflights_mcp_client.py  barryflights_mcp_server.py  cli_confetti.py  lab_output.py  maze_game.py  maze_mcp_client.py  maze_mcp_server.py  maze_play.py  pong_game.py  snake_game.py  storage.py  tasks.py  tictactoe_game.py  tictactoe_play.py
samples/: leaky_barrybot_patch.py  leaky_maze_patch.py  leaky_pong_patch.py  leaky_rps_patch.py  leaky_snake_patch.py  leaky_tictactoe_patch.py  unsafe_agent_patch.py  unsafe_report_patch.py
samples/mcp/: pyproject.toml  safe-migration-reference-server.py  workspace-admin-bridge.py
samples/mcp/workspace_admin_bridge/: __init__.py  server.py
scripts/: agent_code_task.py  agent_compare.py  ai_coach.py  barrybot_demo.py  build_rollout_review_prompt.py  change-name.py  check_repo.py  configure_defenseclaw.sh  consistency_check.py  cprint  defenseclaw_mcp_demo.py  defenseclaw_scenario_review.py  defenseclaw_skill_demo.py  devnet_codex_shim.py  devnet_openai_shim.py  first_agent_result.py  install_ai_tools.sh  install_codex_cli.sh  install_defenseclaw_cli.sh  install_dojo_cli.sh  install_git_hooks.sh  install_opencode_cli.sh  lab_session_env.sh  make_second_brain_note.py  model_resource_walkthrough.py  model_usage.py  normalize_game_contract.py  (+25 more)
(+56 files in other folders)
